Adding investment completion api and scheduler
